# HALO

./: .gitignore  README.md  architecture.md  bootstrap.py  pyproject.toml
configs/: baseline.yaml
experiments/: run_baseline.py
halo/: __init__.py
halo/config/: __init__.py  loader.py  schema.py
halo/consensus/: __init__.py  engine.py
halo/core/: __init__.py  base.py  sdr.py  types.py
halo/encoders/: __init__.py  base.py  category.py  scalar.py
halo/layers/: __init__.py  heterarchical.py  thalamic.py  trn.py
halo/models/: __init__.py  cortical_unit.py
halo/orchestration/: __init__.py  pipeline.py
halo/reliability/: __init__.py  module.py
halo/utils/: __init__.py  logging.py  metrics.py  serialization.py
tests/config/: test_schema.py
tests/consensus/: test_consensus.py
tests/core/: test_sdr.py
tests/encoders/: test_category_encoder.py  test_scalar_encoder.py
tests/layers/: test_trn.py
tests/models/: test_cortical_unit.py
tests/reliability/: test_reliability.py
